contrib/invenio/src/java/org/apache/lucene/queryparser/flexible/aqp/parser/InvenioParser.java
// $ANTLR 3.4 /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g 2013-02-05 20:42:04

   package org.apache.lucene.queryparser.flexible.aqp.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class InvenioParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AMBIGUITY", "AMPER", "AND", "ATOM", "BAR", "BOOST", "CARAT", "CLAUSE", "COLON", "DATE_TOKEN", "DQUOTE", "ESC_CHAR", "FIELD", "FUZZY", "IDENTIFIER", "INT", "LBRACK", "LCURLY", "LPAREN", "MINUS", "MODIFIER", "NEAR", "NOT", "NUMBER", "OPERATOR", "OR", "PHRASE", "PHRASE_ANYTHING", "PLUS", "QANYTHING", "QDATE", "QFUNC", "QMARK", "QNORMAL", "QPHRASE", "QPHRASETRUNC", "QRANGEEX", "QRANGEIN", "QREGEX", "QTRUNCATED", "RBRACK", "RCURLY", "REGEX", "RPAREN", "SECOND_ORDER_OP", "SLASH", "SQUOTE", "STAR", "TERM_CHAR", "TERM_NORMAL", "TERM_START_CHAR", "TERM_TRUNCATED", "TILDE", "TMODIFIER", "TO", "VBAR", "WS"
    };

    public static final int EOF=-1;
    public static final int AMBIGUITY=4;
    public static final int AMPER=5;
    public static final int AND=6;
    public static final int ATOM=7;
    public static final int BAR=8;
    public static final int BOOST=9;
    public static final int CARAT=10;
    public static final int CLAUSE=11;
    public static final int COLON=12;
    public static final int DATE_TOKEN=13;
    public static final int DQUOTE=14;
    public static final int ESC_CHAR=15;
    public static final int FIELD=16;
    public static final int FUZZY=17;
    public static final int IDENTIFIER=18;
    public static final int INT=19;
    public static final int LBRACK=20;
    public static final int LCURLY=21;
    public static final int LPAREN=22;
    public static final int MINUS=23;
    public static final int MODIFIER=24;
    public static final int NEAR=25;
    public static final int NOT=26;
    public static final int NUMBER=27;
    public static final int OPERATOR=28;
    public static final int OR=29;
    public static final int PHRASE=30;
    public static final int PHRASE_ANYTHING=31;
    public static final int PLUS=32;
    public static final int QANYTHING=33;
    public static final int QDATE=34;
    public static final int QFUNC=35;
    public static final int QMARK=36;
    public static final int QNORMAL=37;
    public static final int QPHRASE=38;
    public static final int QPHRASETRUNC=39;
    public static final int QRANGEEX=40;
    public static final int QRANGEIN=41;
    public static final int QREGEX=42;
    public static final int QTRUNCATED=43;
    public static final int RBRACK=44;
    public static final int RCURLY=45;
    public static final int REGEX=46;
    public static final int RPAREN=47;
    public static final int SECOND_ORDER_OP=48;
    public static final int SLASH=49;
    public static final int SQUOTE=50;
    public static final int STAR=51;
    public static final int TERM_CHAR=52;
    public static final int TERM_NORMAL=53;
    public static final int TERM_START_CHAR=54;
    public static final int TERM_TRUNCATED=55;
    public static final int TILDE=56;
    public static final int TMODIFIER=57;
    public static final int TO=58;
    public static final int VBAR=59;
    public static final int WS=60;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public InvenioParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public InvenioParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return InvenioParser.tokenNames; }
    public String getGrammarFileName() { return "/dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g"; }


    public static class mainQ_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mainQ"
    // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:37:1: mainQ : ( operator clauseTop -> ^( AMBIGUITY[\"leftmost-operation\"] operator clauseTop ) | clauseTop );
    public final InvenioParser.mainQ_return mainQ() throws RecognitionException {
        InvenioParser.mainQ_return retval = new InvenioParser.mainQ_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        InvenioParser.operator_return operator1 =null;

        InvenioParser.clauseTop_return clauseTop2 =null;

        InvenioParser.clauseTop_return clauseTop3 =null;


        RewriteRuleSubtreeStream stream_clauseTop=new RewriteRuleSubtreeStream(adaptor,"rule clauseTop");
        RewriteRuleSubtreeStream stream_operator=new RewriteRuleSubtreeStream(adaptor,"rule operator");
        try {
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:37:7: ( operator clauseTop -> ^( AMBIGUITY[\"leftmost-operation\"] operator clauseTop ) | clauseTop )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==AND||(LA1_0 >= NEAR && LA1_0 <= NOT)||LA1_0==OR) ) {
                alt1=1;
            }
            else if ( (LA1_0==BAR||LA1_0==IDENTIFIER||(LA1_0 >= LBRACK && LA1_0 <= LPAREN)||LA1_0==NUMBER||(LA1_0 >= PHRASE && LA1_0 <= PHRASE_ANYTHING)||LA1_0==QMARK||LA1_0==REGEX||LA1_0==SECOND_ORDER_OP||LA1_0==STAR||LA1_0==TERM_NORMAL||LA1_0==TERM_TRUNCATED) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }
            switch (alt1) {
                case 1 :
                    // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:38:2: operator clauseTop
                    {
                    pushFollow(FOLLOW_operator_in_mainQ150);
                    operator1=operator();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_operator.add(operator1.getTree());

                    pushFollow(FOLLOW_clauseTop_in_mainQ152);
                    clauseTop2=clauseTop();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_clauseTop.add(clauseTop2.getTree());

                    // AST REWRITE
                    // elements: clauseTop, operator
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 38:21: -> ^( AMBIGUITY[\"leftmost-operation\"] operator clauseTop )
                    {
                        // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:38:24: ^( AMBIGUITY[\"leftmost-operation\"] operator clauseTop )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(AMBIGUITY, "leftmost-operation")
                        , root_1);

                        adaptor.addChild(root_1, stream_operator.nextTree());

                        adaptor.addChild(root_1, stream_clauseTop.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 2 :
                    // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:39:4: clauseTop
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_clauseTop_in_mainQ168);
                    clauseTop3=clauseTop();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, clauseTop3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mainQ"


    public static class clauseTop_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "clauseTop"
    // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:42:1: clauseTop : clauseOr -> clauseOr ;
    public final InvenioParser.clauseTop_return clauseTop() throws RecognitionException {
        InvenioParser.clauseTop_return retval = new InvenioParser.clauseTop_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        InvenioParser.clauseOr_return clauseOr4 =null;


        RewriteRuleSubtreeStream stream_clauseOr=new RewriteRuleSubtreeStream(adaptor,"rule clauseOr");
        try {
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:43:3: ( clauseOr -> clauseOr )
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:46:3: clauseOr
            {
            pushFollow(FOLLOW_clauseOr_in_clauseTop188);
            clauseOr4=clauseOr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_clauseOr.add(clauseOr4.getTree());

            // AST REWRITE
            // elements: clauseOr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 46:12: -> clauseOr
            {
                adaptor.addChild(root_0, stream_clauseOr.nextTree());

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "clauseTop"


    public static class clauseOr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "clauseOr"
    // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:49:1: clauseOr : ( clauseBasic -> clauseBasic ) ( operator a= clauseBasic -> ^( operator $clauseOr $a) |a= clauseBasic -> ^( OPERATOR[\"DEFOP\"] $clauseOr $a) )* ;
    public final InvenioParser.clauseOr_return clauseOr() throws RecognitionException {
        InvenioParser.clauseOr_return retval = new InvenioParser.clauseOr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        InvenioParser.clauseBasic_return a =null;

        InvenioParser.clauseBasic_return clauseBasic5 =null;

        InvenioParser.operator_return operator6 =null;


        RewriteRuleSubtreeStream stream_clauseBasic=new RewriteRuleSubtreeStream(adaptor,"rule clauseBasic");
        RewriteRuleSubtreeStream stream_operator=new RewriteRuleSubtreeStream(adaptor,"rule operator");
        try {
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:50:3: ( ( clauseBasic -> clauseBasic ) ( operator a= clauseBasic -> ^( operator $clauseOr $a) |a= clauseBasic -> ^( OPERATOR[\"DEFOP\"] $clauseOr $a) )* )
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:51:3: ( clauseBasic -> clauseBasic ) ( operator a= clauseBasic -> ^( operator $clauseOr $a) |a= clauseBasic -> ^( OPERATOR[\"DEFOP\"] $clauseOr $a) )*
            {
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:51:3: ( clauseBasic -> clauseBasic )
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:51:4: clauseBasic
            {
            pushFollow(FOLLOW_clauseBasic_in_clauseOr209);
            clauseBasic5=clauseBasic();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_clauseBasic.add(clauseBasic5.getTree());

            // AST REWRITE
            // elements: clauseBasic
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 51:16: -> clauseBasic
            {
                adaptor.addChild(root_0, stream_clauseBasic.nextTree());

            }


            retval.tree = root_0;
            }

            }


            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:52:3: ( operator a= clauseBasic -> ^( operator $clauseOr $a) |a= clauseBasic -> ^( OPERATOR[\"DEFOP\"] $clauseOr $a) )*
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AND||(LA2_0 >= NEAR && LA2_0 <= NOT)||LA2_0==OR) ) {
                    alt2=1;
                }
                else if ( (LA2_0==BAR||LA2_0==IDENTIFIER||(LA2_0 >= LBRACK && LA2_0 <= LPAREN)||LA2_0==NUMBER||(LA2_0 >= PHRASE && LA2_0 <= PHRASE_ANYTHING)||LA2_0==QMARK||LA2_0==REGEX||LA2_0==SECOND_ORDER_OP||LA2_0==STAR||LA2_0==TERM_NORMAL||LA2_0==TERM_TRUNCATED) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:52:4: operator a= clauseBasic
            	    {
            	    pushFollow(FOLLOW_operator_in_clauseOr219);
            	    operator6=operator();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_operator.add(operator6.getTree());

            	    pushFollow(FOLLOW_clauseBasic_in_clauseOr223);
            	    a=clauseBasic();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_clauseBasic.add(a.getTree());

            	    // AST REWRITE
            	    // elements: a, clauseOr, operator
            	    // token labels: 
            	    // rule labels: retval, a
            	    // token list labels: 
            	    // rule list labels: 
            	    // wildcard labels: 
            	    if ( state.backtracking==0 ) {

            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            	    RewriteRuleSubtreeStream stream_a=new RewriteRuleSubtreeStream(adaptor,"rule a",a!=null?a.tree:null);

            	    root_0 = (Object)adaptor.nil();
            	    // 52:27: -> ^( operator $clauseOr $a)
            	    {
            	        // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:52:30: ^( operator $clauseOr $a)
            	        {
            	        Object root_1 = (Object)adaptor.nil();
            	        root_1 = (Object)adaptor.becomeRoot(stream_operator.nextNode(), root_1);

            	        adaptor.addChild(root_1, stream_retval.nextTree());

            	        adaptor.addChild(root_1, stream_a.nextTree());

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;
            	    }

            	    }
            	    break;
            	case 2 :
            	    // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:53:5: a= clauseBasic
            	    {
            	    pushFollow(FOLLOW_clauseBasic_in_clauseOr243);
            	    a=clauseBasic();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_clauseBasic.add(a.getTree());

            	    // AST REWRITE
            	    // elements: a, clauseOr
            	    // token labels: 
            	    // rule labels: retval, a
            	    // token list labels: 
            	    // rule list labels: 
            	    // wildcard labels: 
            	    if ( state.backtracking==0 ) {

            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            	    RewriteRuleSubtreeStream stream_a=new RewriteRuleSubtreeStream(adaptor,"rule a",a!=null?a.tree:null);

            	    root_0 = (Object)adaptor.nil();
            	    // 53:19: -> ^( OPERATOR[\"DEFOP\"] $clauseOr $a)
            	    {
            	        // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:53:22: ^( OPERATOR[\"DEFOP\"] $clauseOr $a)
            	        {
            	        Object root_1 = (Object)adaptor.nil();
            	        root_1 = (Object)adaptor.becomeRoot(
            	        (Object)adaptor.create(OPERATOR, "DEFOP")
            	        , root_1);

            	        adaptor.addChild(root_1, stream_retval.nextTree());

            	        adaptor.addChild(root_1, stream_a.nextTree());

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "clauseOr"


    public static class clauseBare_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "clauseBare"
    // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:56:1: clauseBare : ( clauseBasic -> clauseBasic ) (a= clauseBasic -> ^( OPERATOR[\"DEFOP\"] $clauseBare $a) )* ;
    public final InvenioParser.clauseBare_return clauseBare() throws RecognitionException {
        InvenioParser.clauseBare_return retval = new InvenioParser.clauseBare_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        InvenioParser.clauseBasic_return a =null;

        InvenioParser.clauseBasic_return clauseBasic7 =null;


        RewriteRuleSubtreeStream stream_clauseBasic=new RewriteRuleSubtreeStream(adaptor,"rule clauseBasic");
        try {
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:57:3: ( ( clauseBasic -> clauseBasic ) (a= clauseBasic -> ^( OPERATOR[\"DEFOP\"] $clauseBare $a) )* )
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:58:3: ( clauseBasic -> clauseBasic ) (a= clauseBasic -> ^( OPERATOR[\"DEFOP\"] $clauseBare $a) )*
            {
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:58:3: ( clauseBasic -> clauseBasic )
            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:58:4: clauseBasic
            {
            pushFollow(FOLLOW_clauseBasic_in_clauseBare274);
            clauseBasic7=clauseBasic();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_clauseBasic.add(clauseBasic7.getTree());

            // AST REWRITE
            // elements: clauseBasic
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 58:16: -> clauseBasic
            {
                adaptor.addChild(root_0, stream_clauseBasic.nextTree());

            }


            retval.tree = root_0;
            }

            }


            // /dvt/workspace/montysolr/contrib/invenio/grammars/Invenio.g:59:3: (a= clauseBasic -> ^( OPERATOR[\"DEFOP\"] $clauseBare $a) )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);
